--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <div id="resultBox" style="display:none;"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
