--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
   <meta charset="UTF-8">
   <title>Cuestionario paso a paso</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    .finisher-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+  </style>
 </head>
 <body>
+  <!-- Fondo animado -->
+  <div class="finisher-header"></div>
+
+  <!-- Contenido del cuestionario -->
   <div class="container">
-    <h1>Cuestionario</h1>
+    <h1>🗽 200 Palabras Parte 1️⃣</h1>
     <div id="questionBox">
       <p id="questionText"></p>
       <input type="text" id="answerInput" placeholder="Escribí tu respuesta...">
@@ -17,6 +31,51 @@
     <div id="resultBox" style="display:none;"></div>
   </div>
 
+  <!-- Lógica del cuestionario -->
   <script src="main.js"></script>
+
+  <!-- Fondo animado -->
+  <script src="finisher-header.es5.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+new FinisherHeader({
+  "count": 10,
+  "size": {
+    "min": 2,
+    "max": 40,
+    "pulse": 0
+  },
+  "speed": {
+    "x": {
+      "min": 0,
+      "max": 0.8
+    },
+    "y": {
+      "min": 0,
+      "max": 0.2
+    }
+  },
+  "colors": {
+    "background": "#15182e",
+    "particles": [
+      "#ff926b",
+      "#87ddfe",
+      "#acaaff",
+      "#1bffc2",
+      "#f9a5fe"
+    ]
+  },
+  "blending": "screen",
+  "opacity": {
+    "center": 1,
+    "edge": 1
+  },
+  "skew": -1,
+  "shapes": [
+    "c",
+    "s",
+    "t"
+  ]
+});
+</script>
 </body>
 </html>
