Agregando el boton de volver

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <div class="menu-container">
     <h1>🗽 200 Palabras - Parte 1️⃣</h1>
-    <button class="menu-btn" onclick="location.href='modos/texto/index.html'">📝 Modo Texto</button>
+    <button class="menu-btn" onclick="location.href='modos/texto/index.html'">📝 Evaluacion Escrita</button>
     <button class="menu-btn" onclick="location.href='modos/autoevaluacion/index.html'">🤔 Autoevaluación</button>
   </div>
 
