--- a/modos/autoevaluacion/index.html
+++ b/modos/autoevaluacion/index.html
@@ -42,6 +42,9 @@
   </style>
 </head>
 <body>
+  <!-- Botón fijo arriba a la derecha -->
+  <button class="btn-volver" onclick="location.href='../../index.html'">⬅️ Volver</button>
+
   <div class="finisher-header"></div>
 
   <div class="container">
