--- a/modos/texto/index.html
+++ b/modos/texto/index.html
@@ -20,6 +20,8 @@
 <body>
   <!-- Fondo animado -->
   <div class="finisher-header"></div>
+  <!-- Botón fijo arriba a la derecha -->
+  <button class="btn-volver" onclick="location.href='../../index.html'">⬅️ Volver</button>
 
   <!-- Contenido del cuestionario -->
   <div class="container">
