--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       color: #fff;
       margin: 0;
       height: 100vh;
-      display: flex;
       justify-content: center;
       align-items: center;
     }
@@ -57,6 +56,10 @@
   </style>
 </head>
 <body>
+  <div class="top-banner">
+    <span>FABO PREGUNTAS</span>
+  </div>
+
   <div class="finisher-header"></div>
 
   <div class="menu-container">
