--- a/ingles/modos/autoevaluacion/index.html
+++ b/ingles/modos/autoevaluacion/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Autoevaluación - 200 Palabras</title>
-  <link rel="stylesheet" href="../../css/styles.css">
+  <link rel="stylesheet" href="../../../css/styles.css">
   <link rel="stylesheet" href="../../css/autoevaluacion.css">
 
   <style>
@@ -62,7 +62,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="../../js/finisher-header.es5.min.js"></script>
+  <script src="../../../js/finisher-header.es5.min.js"></script>
   <script src="../../js/utils.js"></script>
   <script src="autoeval.js"></script>
   <script>
