--- a/ingles/modos/texto/index.html
+++ b/ingles/modos/texto/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Modo Texto - 200 Palabras</title>
-  <link rel="stylesheet" href="../../css/styles.css">
+  <link rel="stylesheet" href="../../../css/styles.css">
   <link rel="stylesheet" href="../../css/texto.css">
 
   <style>
@@ -36,7 +36,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="../../js/finisher-header.es5.min.js"></script>
+  <script src="../../../js/finisher-header.es5.min.js"></script>
   <script src="../../js/utils.js"></script>
   <script src="texto.js"></script>
 
