--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>📚 Fabo Materias</title>
   <link rel="stylesheet" href="ingles/css/styles.css">
   <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #0f0f2e;
+      color: #fff;
+      margin: 0;
+      padding-top: 64px;
+      min-height: 100vh;
+      overflow-y: auto;
+    }
+
     .finisher-header {
       position: fixed;
       top: 0;
@@ -14,71 +24,63 @@
       z-index: -1;
     }
 
-    .menu-container {
-      max-width: 720px;
-      margin: 20px auto 0 auto;
-      background: rgba(12, 14, 40, 0.75);
-      border-radius: 16px;
-      padding: 40px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.7);
-      backdrop-filter: blur(12px);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      text-align: center;
-      animation: fadeIn 1s ease;
-    }
-
-    .menu-container h1 {
-      font-size: 2em;
-      margin-bottom: 40px;
-    }
-
-    .menu-btn {
-      display: block;
-      width: 280px;
-      margin: 20px auto;
-      padding: 20px;
-      font-size: 1.2em;
-      background-color: #6366f1;
-      color: white;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 8px 24px rgba(99, 102, 241, 0.5);
-    }
-
-    .menu-btn:hover {
-      background-color: #818cf8;
-      transform: scale(1.05);
-    }
-
     .top-banner {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 48px;
-      padding: 0 16px;
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(10px);
+      color: #fff;
       text-align: center;
+      font-weight: 600;
       line-height: 48px;
       font-size: 1.1em;
-      font-weight: 600;
-      color: #ffffff;
       letter-spacing: 1px;
       z-index: 100;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     }
 
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #0f0f2e;
-      color: #fff;
-      margin: 0;
-      height: 100vh;
-      overflow: hidden;
-      padding-top: 80px;
+    .menu-section {
+      max-width: 960px;
+      margin: 40px auto;
+      background: rgba(12, 14, 40, 0.75);
+      padding: 32px;
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.7);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(12px);
+      animation: fadeIn 1s ease;
+    }
+
+    .menu-section h2 {
+      margin-bottom: 24px;
+      text-align: center;
+      font-size: 1.6em;
+    }
+
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 16px;
+    }
+
+    .button-grid button {
+      padding: 16px;
+      font-size: 1.1em;
+      background-color: #6366f1;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: 0 4px 14px rgba(99, 102, 241, 0.4);
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .button-grid button:hover {
+      background-color: #818cf8;
+      transform: scale(1.05);
     }
 
     @keyframes fadeIn {
@@ -94,39 +96,92 @@
   </style>
 </head>
 <body>
-  <div class="top-banner">
-    <span>FABO MATERIAS</span>
-  </div>
-
+  <div class="top-banner">FABO MATERIAS</div>
   <div class="finisher-header"></div>
 
-  <div class="menu-container">
-    <h1>📚 Elegí una materia</h1>
-    <button class="menu-btn" onclick="location.href='ingles/index.html'">🇬🇧 Inglés</button>
-    <button class="menu-btn" onclick="location.href='programacion/index.html'">💻 Programación</button>
-    <button class="menu-btn" onclick="location.href='matematicas/index.html'">➗ Matemáticas</button>
-    <!-- Podés seguir agregando más materias -->
+  <!-- Sección: Primer Año -->
+  <div class="menu-section">
+    <h2>📘 Primer Año</h2>
+    <div class="button-grid">
+      <button onclick="location.href='ingles/index.html'">🇬🇧 EPA</button>
+      <button onclick="location.href='matematicas/index.html'">➗ COC</button>
+      <button onclick="location.href='geografia/index.html'">🌍 MATE 0</button>
+      <button onclick="location.href='historia/index.html'">📜 CADP</button>
+      <button onclick="location.href='ingles/index.html'">🇬🇧 OC</button>
+      <button onclick="location.href='matematicas/index.html'">➗ MATE 1</button>
+      <button onclick="location.href='geografia/index.html'">🌍 TALLER</button>
+      <button onclick="location.href='historia/index.html'">📜 ARQUITECTURA</button>
+      <button onclick="location.href='historia/index.html'">📜 MATE 2</button>
+    </div>
+    
   </div>
 
-  <script src="ingles/js/finisher-header.es5.min.js" type="text/javascript"></script>
+  <!-- Sección: Segundo Año -->
+  <div class="menu-section">
+    <h2>📗 Segundo Año</h2>
+    <div class="button-grid">
+      <button>📘 FOD</button>
+      <button>🔬 AYED</button>
+      <button>📐 SEMINARIOS</button>
+      <button>🧠 DBD</button>
+      <button>📘 INGE 1</button>
+      <button>🔬 OBJETOS 1</button>
+      <button>📐 ISO</button>
+      <button>🧠 TALLER DE INGLES</button>
+    </div>
+  </div>
+
+  <!-- Sección: Tercer Año -->
+  <div class="menu-section">
+    <h2>📙 Tercer Año</h2>
+    <div class="button-grid">
+      <button>🧪 Química</button>
+      <button>🔢 Álgebra</button>
+      <button>🖼️ Arte</button>
+      <button>📖 Ética</button>
+    </div>
+  </div>
+
+  <!-- Sección: Cuarto Año -->
+  <div class="menu-section">
+    <h2>📕 Cuarto Año</h2>
+    <div class="button-grid">
+      <button onclick="location.href='programacion/index.html'">💻 Programación</button>
+      <button>📊 Economía</button>
+      <button>📚 Literatura Avanzada</button>
+      <button>📓 Filosofía</button>
+    </div>
+  </div>
+
+  <!-- Sección: Quinto Año -->
+  <div class="menu-section">
+    <h2>📓 Quinto Año</h2>
+    <div class="button-grid">
+      <button>🧑‍⚖️ Derecho</button>
+      <button>💼 Proyectos</button>
+      <button>💬 Comunicación</button>
+      <button>🧮 Estadística</button>
+    </div>
+  </div>
+<script src="./js/finisher-header.es5.min.js" type="text/javascript"></script>
   <script>
     new FinisherHeader({
-      "count": 20,
-      "size": { "min": 2, "max": 40, "pulse": 0 },
-      "speed": {
-        "x": { "min": 0, "max": 0.8 },
-        "y": { "min": 0, "max": 0.2 }
+      count: 20,
+      size: { min: 2, max: 40, pulse: 0 },
+      speed: {
+        x: { min: 0, max: 0.8 },
+        y: { min: 0, max: 0.2 }
       },
-      "colors": {
-        "background": "#15182e",
-        "particles": [
+      colors: {
+        background: "#15182e",
+        particles: [
           "#ff926b", "#87ddfe", "#acaaff", "#1bffc2", "#f9a5fe"
         ]
       },
-      "blending": "screen",
-      "opacity": { "center": 1, "edge": 1 },
-      "skew": -1,
-      "shapes": ["c", "s", "t"]
+      blending: "screen",
+      opacity: { center: 1, edge: 1 },
+      skew: -1,
+      shapes: ["c", "s", "t"]
     });
   </script>
 </body>
