--- a/ingles/modos/texto/index.html
+++ b/ingles/modos/texto/index.html
@@ -37,7 +37,7 @@
 
   <!-- Scripts -->
   <script src="../../../js/finisher-header.es5.min.js"></script>
-  <script src="../../js/utils.js"></script>
+  <script src="../../../js/utils.js"></script>
   <script src="texto.js"></script>
 
   <script>
